--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 RidePilot is a paratransit trip scheduling application. 
 
 RidePilot is a project of Ride Connection, a Portland-area community
-transpotation provider.  It is primarily written by hackers at
+transportation provider.  It is primarily written by hackers at
 OpenPlans.
 
 -----------------------
