--- a/README
+++ b/README
@@ -12,7 +12,7 @@ and postgis.  This adds support for dmetaphone, which is how we
 phonetically match names.  Run psql and then the following commands:
 
 -- Create a new database
-CREATE DATABASE template_postgis;
+CREATE DATABASE template_postgis15;
 
 -- Make it a template database
 UPDATE pg_database SET datistemplate = TRUE WHERE datname = 'template_postgis';
@@ -66,7 +66,7 @@ public key on the staging/production servers so you can run commands as the
 
 To set this up, talk to another developer to get your public key on the 
 machines. If you need to do system administration on the servers, you'll need 
-your own user accout set up as well.
+your own user account set up as well.
 
 Once you have SSH access as deployer, you can deploy:
 
