--- a/README
+++ b/README
@@ -101,19 +101,25 @@ phonetically match names.  Run `psql` and then the following commands:
         -- You'll also want to set up the fuzzy string matching functions
         \i /opt/local/share/postgresql84/contrib/fuzzystrmatch.sql 
 
-2. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
+2. Install the gem bundle. In the project dir, run:
+
+        bundle install
+
+3. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
 
         template: template_postgis15
 
-3. Create the development and test databases
+4. Copy `config/app_config_template.yml` to `config/app_config.yml`. You can leave it as-is in most cases.
 
-4. Make sure you can start the app without error
+5. Create the development and test databases
+
+6. Make sure you can start the app without error
 
         rails server
     
    Then make sure you can browse the website at `http://localhost:3000` without error
 
-5. Make sure all of the automated tests pass
+7. Make sure all of the automated tests pass
     
         bundle exec rake db:test:prepare
         bundle exec rake test
