--- a/README
+++ b/README
@@ -66,11 +66,7 @@ Provisioning a server will download copies of all of the Chef cookbooks to the `
     
 6. `cd` into (or out and back into) the project directory to pickup the RVM configuration files. Follow any instructions for trusting the .rvmrc file or creating the gemset.
 
-7. Continue to "Common Setup Steps"
-    
-### Common Setup Steps
-
-1. To set up `postgres` for use with RidePilot, you will need the
+7. To set up PostgreSQL for use with RidePilot, you will need the
 `fuzzystrmatch` library (included in postgresql-contrib-8.4 in Ubuntu),
 and `postgis`.  This adds support for `dmetaphone`, which is how we
 phonetically match names.  Run `psql` and then the following commands:
@@ -101,25 +97,29 @@ phonetically match names.  Run `psql` and then the following commands:
         -- You'll also want to set up the fuzzy string matching functions
         \i /opt/local/share/postgresql84/contrib/fuzzystrmatch.sql 
 
-2. Install the gem bundle. In the project dir, run:
+8. Continue to "Common Setup Steps"
+    
+### Common Setup Steps
+
+1. Install the gem bundle. In the project dir, run:
 
         bundle install
 
-3. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
+2. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
 
         template: template_postgis15
 
-4. Copy `config/app_config_template.yml` to `config/app_config.yml`. You can leave it as-is in most cases.
+3. Copy `config/app_config_template.yml` to `config/app_config.yml`. You can leave it as-is in most cases.
 
-5. Create the development and test databases
+4. Create the database user and development and test databases per the database config
 
-6. Make sure you can start the app without error
+5. Make sure you can start the app without error
 
         rails server
     
    Then make sure you can browse the website at `http://localhost:3000` without error
 
-7. Make sure all of the automated tests pass
+6. Make sure all of the automated tests pass
     
         bundle exec rake db:test:prepare
         bundle exec rake test
