--- a/README
+++ b/README
@@ -85,39 +85,46 @@ phonetically match names.  Run `psql` and then the following commands:
     
 ### Common Setup Steps
 
-2. Install RVM
+1. Install RVM
 
-3. Install any additional libraries reported by `rvm requirements`
+2. Install any additional libraries reported by `rvm requirements`
 
-4. Install the required version of Ruby:
+3. Install the required version of Ruby:
 
         rvm list known
         rvm install ruby-xxx.xxx
 
-5. Install bundler
+4. Install bundler
 
         rvm gemset use ruby-xxx.xxx@global
         gem install bundler
     
-6. `cd` into (or out and back into) the project directory to pickup the RVM configuration files. Follow any instructions for creating the gemset.
+5. `cd` into (or out and back into) the project directory to pickup the RVM configuration files. Follow any instructions for creating the gemset.
 
-1. Install the gem bundle. In the project dir, run:
+6. Install the gem bundle. In the project dir, run:
 
         bundle install
 
-2. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
+7. Make sure your `config/database.yml` contains the line in the section named `common: &common`:
 
         template: template_postgis
 
-3. Copy `config/app_config_template.yml` to `config/app_config.yml`. You can leave it as-is in most cases.
+8. Copy `config/app_config_template.yml` to `config/app_config.yml`. You can leave it as-is in most cases.
 
-5. Make sure you can start the app without error
+9. Setup the database:
+        
+        bin/rake db:setup
+        
+   Among other things, this will seed the database with some initial data. You can immediately log in using the email address "admin@rideconnection.org" and
+   the password "password 1". *Be sure to change the initial password if this is a production server.*
+
+10. Make sure you can start the app without error
 
         bin/rails server
     
    Then make sure you can browse the website at `http://localhost:3000` without error
 
-6. Make sure all of the automated tests pass
+11. Make sure all of the automated tests pass
     
         bin/rake db:test:prepare
         bin/rake test
