values for address, customer, and taxi labels.  ensure default Rails datetimepicker values are loaded.  make datetimepicker format configuratble

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  #addresses
   address_name: "Address Name:"
   building_name: "Building Name:"
   address: "Address:"
@@ -32,6 +33,78 @@ en:
   yes: "Yes"
   no: "No"
   default_trip_purpose: "Default Trip Purpose:"
+  address_form_error_message:
+    one: "%{count} error prohibited this address from being saved:"
+    other: "%{count} errors sprohibited this address from being saved:"
+  editing_address: "Editing Address"
+  reassociate_trips: "Associate this addresses's trips with another address."
+  address_search: "Address Search"
+  #cab trips
+  pickup_time: "Pickup Time"
+  customer_name: "Customer Name"
+  trip_purpose: "Trip Purpose"
+  round_trip: "Round Trip"
+  guest_count: "Guest Count"
+  attendant_count: "Attendant Count"
+  result: "Result"
+  listing_cab_runs: "Listing Cab Runs"
+  edit_multi_cab_heading: "Editing cab trips for %{formatted_week}"
+  no_cab_trips_on_this_date: "No cab trips on this date"
+  no_cab_trips_in_date_range: "No cab trips in this date range"
+  edit_x_cab_trips: 
+    one: "Edit %{count} cab trip"
+    other: "Edit %{count} cab trips"
+  #customers
+  name: "Name"
+  phone: "Phone"
+  alternate_phone: "Alternate Phone"
+  email: "Email"
+  date_of_birth: "Date of Birth"
+  ethnicity: "Ethnicity"
+  mobility: "Mobility"
+  mobility_notes: "Mobility Notes"
+  medicaid_eligible: "Medicaid Eligible"
+  ada_eligible: "ADA Eligibile"
+  default_service_level: "Default Service Level"
+  default_funding_source: "Default Funding Source"
+  prime_number: "Prime Number"
+  emergency_contact_notes: "Emergency Contact Notes"
+  private_notes: "Private Notes"
+  public_notes: "Public Notes"
+  inactivated_reason: "Inactivated Reason"
+  activated_date: "Activated Date"
+  inactivated_date: "Inactivated Date"
+  customer_form_error_message: 
+    one: "%{count} error prohibited this customer from being saved:"
+    other: "%{count} errors sprohibited this customer from being saved:"
+  ignore_duplicates: "Ignore duplicates"
+  group: "Group"
+  first_name: "First Name:"
+  middle_initial: "Middle Initial:"
+  last_name: "Last Name:"
+  alternate_phone_number: "Alternate Phone"
+  inactivation_reason: "Inactivation Reason"
+  editing_customer: "Editing Customer: %{customer_name}"
+  customer_listing: "Customer Listing"
+  new_customer: "New Customer"
+  new_trip_for_customer: "New Trip for This Customer"
+  #Shared
+  new_trip: "New Trip"
+  date: "Date"
+  edit: "Edit"
+  delete: "Delete"
+  confirm: "Are you sure?"
+  cancel: "Cancel"
+  back: "Back"
+  inactivate: "Inactivate"
+  submit: "Submit"
+  previous: "Previous"
+  next: "Next"
+  this_week: "This Week"
+  update: "Update"
+  search: "Search"
+  date_order_parameter: "year, month, day"
+  #Activerecord
   activerecord:
     errors:
       models:
