finish customer field labels [#98320888]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,7 +80,7 @@ en:
   ignore_duplicates: "Ignore duplicates"
   group: "Group"
   first_name: "First Name:"
-  middle_initial: "Middle Initial:"
+  middle_initial: "Middle Initial"
   last_name: "Last Name:"
   alternate_phone_number: "Alternate Phone"
   inactivation_reason: "Inactivation Reason"
@@ -88,6 +88,11 @@ en:
   customer_listing: "Customer Listing"
   new_customer: "New Customer"
   new_trip_for_customer: "New Trip for This Customer"
+  duplicate: "Duplicate"
+  customer: "Customer:"
+  reassociate_customer_trips: "Associate this customer's trips with another customer."
+  group_name: "Group Name"
+  no_trips_yet: "No trips yet."
   #Shared
   new_trip: "New Trip"
   date: "Date"
