--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -109,15 +109,24 @@ en:
   update: "Update"
   search: "Search"
   date_order_parameter: "year,month,day"
-  #Activerecord
-  activerecord:
-    errors:
-      models:
-        run:
-          attributes:
-            scheduled_end_time:
-              after: "must be after the scheduled start time"
-            actual_end_time:
-              after: "must be after the actual start time"
-            date:
-              invalid_date: "must be a valid date"
+  #device pool
+  remove_device_pool_driver: "Remove"
+  device_pool_form_error_message: 
+    one: "%{count} error prohibited this device pool from being saved:"
+    other: "%{count} errors sprohibited this device pool from being saved:"
+  device_pool_name: "Name"
+  device_pool_color: "Color"
+  edit_device_pool: "Edit Device Pool"
+  new_device_pool: "New Device Pool"
+  #devise
+  resend_confirmation_instructions_heading: "Resend Confirmation Instructions"
+  resend_conformation_instructions: "Resend Confirmation Instructions"
+  confirmation_instructions_email: "<p>Welcome %{email}!</p><p>You can confirm your account email through the link below:</p><p>%{link}</p>"
+  reset_password_email: "<p>Hello %{email}!</p><p>Someone has requested a link to change your password. You can do this through the link below.</p><p>%{link}</p>"
+  unlock_instructions_email: "<p>Hello %{email}!</p><p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p><p>Click the link below to unlock your account:</p><p>%{link}</p>"
+  change_your_password_heading: "Change your password"
+  new_password: "New Password"
+  confirm_new_password: "Confirm New Password"
+  change_my_password: "Change My Password"
+  new_password_heading: "Forgot your password?"
+  submit_new_password_form: "Send me reset password instructions"
