enhance find_missing_translation_keys rake task

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,6 +99,7 @@ en:
   delete_value: "Delete Value"
   lookup_table: "Lookup Table"
   edit_value: "Edit Value"
+  value: "Value"
 
   #Shared
   site_title: "Ridepilot"
