--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
   confirmation_instructions_email: "<p>Welcome %{email}!</p><p>You can confirm your account email through the link below:</p><p>%{link}</p>"
   reset_password_email: "<p>Hello %{email}!</p><p>Someone has requested a link to change your password. You can do this through the link below.</p><p>%{link}</p>"
   unlock_instructions_email: "<p>Hello %{email}!</p><p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p><p>Click the link below to unlock your account:</p><p>%{link}</p>"
+  new_user_email: "Hi, %{email} <br/><br/>You have been added as a user to RidePilot.  You can set your password at<br/>%{link}<br/><br/>You will be asked to change it when you log in.<br/>"
   change_your_password_heading: "Change your password"
   new_password: "New Password"
   confirm_new_password: "Confirm New Password"
