WIP Providers page.  Complete up through device pools. [#98320888]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,14 +21,14 @@
 
 en:
   #addresses
-  address_name: "Address Name:"
-  building_name: "Building Name:"
-  address: "Address:"
-  city: "City:"
-  state: "State:"
-  zip: "Zip Code:"
-  phone_number: "Phone Number:"
-  in_district: "In TriMet District:"
+  address_name: "Address Name"
+  building_name: "Building Name"
+  address: "Address"
+  city: "City"
+  state: "State"
+  zip: "Zip Code"
+  phone_number: "Phone Number"
+  in_district: "In TriMet District"
   unspecified: "Unspecified"
   yes: "Yes"
   no: "No"
@@ -226,3 +226,61 @@ en:
   edit_ethnicity_link_text: "Edit Ethnicity"
   edit_ethnicity_provider_label: "Provider"
   edit_ethnicity_name_label: "Name"
+  #Providers
+  provider_form_name: "Name"
+  provider_form_logo: "Logo"
+  provider_form_dispatch: "Dispatch enabled"
+  provider_form_scheduling: "Scheduling"
+  provider_form_trip_entry_from_runs: "Allow trip entry from runs page"
+  provider_form_submit: "Submit"
+  provider_index_heading: "Providers"
+  provider_index_name: "Name"
+  provider_index_users: "Users"
+  provider_index_details: "Details"
+  new_provider_link_text: "New Provider"
+  show_provider_heading: "Provider: %{provider}"
+  show_provider_address_heading: "Addresses"
+  show_provider_search_addresses: "Search addresses:"
+  address_results_name_column: "Name"
+  address_results_building_name_column: "Building Name"
+  no_addresses_yet: "No addresses yet."
+  search_for_address: "Search for an address above."
+  no_users_yet: "No users yet."
+  role: "Role"
+  last_login: "Last Login"
+  change_password: "Change Password"
+  change_role: "Change role"
+  delete_role_confirm: "Are you sure?"
+  create_user_link_text: "Create User"
+  switch_providers_to_create_user: "<p>You are currently logged in to %{current_provider}.  To create a user for %{provider} , please switch providers by using the dropdown menu at the top of this page.</p>"
+  enabled: "Enabled?"
+  dispatch: "Dispatch"
+  scheduling: "Scheduling"
+  add_trips_from_run_pages: "Add Trips from Runs Pages"
+  reimbursement_rates: "Reimbursement Rates"
+  reimbursement_rates_heading: "Per-Ride Reimbursement Rates"
+  oaa3b_per_ride_reimbursement_rate: "OAA III B"
+  ride_connection_per_ride_reimbursement_rate: "Ride Connection"
+  tri_met_per_ride_reimbursement_rate: "Tri-Met"
+  stf_van_per_ride_reimbursement_rate: "USDOT STF Van"
+  taxi_per_ride_reimbursement_rates: "Taxi Per-Ride Reimbursement Rates"
+  administrative_fee: "Administrative Fee"
+  ambulatory_load_fee: "Ambulatory Load Fee"
+  wheelchair_load_fee: "Wheelchair Load Fee"
+  ambulatory_reimbursement_rate: "Ambulatory Mileage Rate"
+  wheelchair_reimbursement_rate: "Wheelchair Mileage Rate"
+  submit_reimbursement_rates: "Save Reimbursement Rates"
+  no_device_pool: "No device pools yet."
+  drivers: "Drivers"
+  device_pool_delete_confirm: "Are you sure?"
+  no_drivers: "No drivers yet."
+  add_driver_to_device_pool: "Add Driver"
+  add_vehicle_to_device_pool: "Add Vehicle"
+  new_device_pool_link_text: "Create Device Pool"
+  switch_providers_to_add_device_pool: "<p>You are currently logged in to %{current_provider}.  To create a device pool for %{provider}, please switch providers by using the dropdown menu at the top of this page.</p>"
+
+
+
+
+
+
