finishes providers page FINALLY [#98320888]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,6 +110,8 @@ en:
   date_order_parameter: "year,month,day"
   new_trip_link_text: "New Trip"
   month: "Month"
+  active: "Active"
+  inactive: "Inactive"
   #device pool
   remove_device_pool_driver: "Remove"
   device_pool_form_error_message: 
@@ -278,6 +280,38 @@ en:
   add_vehicle_to_device_pool: "Add Vehicle"
   new_device_pool_link_text: "Create Device Pool"
   switch_providers_to_add_device_pool: "<p>You are currently logged in to %{current_provider}.  To create a device pool for %{provider}, please switch providers by using the dropdown menu at the top of this page.</p>"
+  driver_paid: "Paid"
+  volunteer: "Volunteer"
+  delete_driver_confirm: "Are you sure?"
+  new_driver_link_text: "Create Driver"
+  switch_providers_to_create_driver: "<p>You are currently logged in to %{current_provider}.  To create a driver for %{provider} , please switch providers by using the dropdown menu at the top of this page.</p>"
+  no_vehicles: "No vehicles yet."
+  vehicle_year: "Year"
+  vehicle_make: "Make"
+  vehicle_model: "Model"
+  license_plate: "License Plate"
+  vin: "VIN"
+  vehicle_location: "Location"
+  default_driver: "Default Driver"
+  delete_vehicle_confirmation: "Are you sure?"
+  new_vehicle_link_text: "Create Vehicle"
+  switch_providers_to_create_vehicle: "<p>You are currently logged in to %{current_provider}.  To create a vehicle for %{provider} , please switch providers by using the dropdown menu at the top of this page.</p>"
+  no_ethnicities: "No ethnicities yet."
+  delete_provider_ethnicity_confirm: "Are you sure?"
+  new_ethnicity_link_text: "Create Ethnicity"
+  switch_providers_to_create_ethnicity: "<p>You are currently logged in to %{current_provider}.  To create an ethnicity for %{provider} , please switch providers by using the dropdown menu at the top of this page.</p>"
+  region_heading: "Region Boundaries"
+  northwest_corner: "Northwest Corner"
+  latitude: "Latitude"
+  longitude: "Longitude"
+  southeast_corner: "Southeast Corner"
+  save_region_submit: "Save Region"
+  dispatch_view_heading: "Dispatch View"
+  map_center: "Map Center"
+  zoom_level: "Zoom Level"
+  zoom: "Zoom:"
+  save_viewport_submit: "Save Viewport"
+
 
 
 
