--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,7 @@ en:
   device_pool_form_error_message: 
     one: "%{count} error prohibited this device pool from being saved:"
     other: "%{count} errors sprohibited this device pool from being saved:"
+  device_pools: 'Device Pools'
   device_pool_name: "Name"
   device_pool_color: "Color"
   edit_device_pool: "Edit Device Pool"
