Labels and Translations for Run views. [#98320888]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,7 +175,7 @@ en:
     other: "%{count} errors prohibited this driver from being saved"
   driver_form_name: "Name"
   driver_form_active: "Active"
-  driver_form_paid: "Paid"
+  paid: "Paid"
   driver_form_associated_user: "Associated User"
   driver_form_submit: "Submit"
   edit_driver_heading: "Edit Driver"
@@ -518,5 +518,24 @@ en:
   mileage: "Mileage"
   license_plate: "License Plate"
   garaged_location: "Garaged Location"
-
-
+  #runs
+  runs_form_error_message: 
+    one: "%{count} error prohibited this run from being saved:"
+    other: "%{count} errors sprohibited this run from being saved:"
+  scheduled_start_time: "Scheduled Start Time"
+  scheduled_end_time: "Scheduled End Time"
+  delete_run_link_text: "Delete Run (does not delete trips)"
+  delete_run_confirm: "Are you sure?"
+  no_runs: "No runs"
+  no_vehicle: "No Vehicle"
+  no_driver: "No driver"
+  complete: "Complete"
+  incomplete: "Incomplete"
+  editing_run_heading: "Editing Run: %{run_date}"
+  submit_run: "Submit"
+  run_index_heading: "Listing runs"
+  runs_between: "Runs between"
+  and: "and"
+  new_run_link_text: "New Run"
+  new_run_heading: "New Run"
+  new_run_submit: "Submit"
