--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
   default_trip_purpose: "Default Trip Purpose:"
   address_form_error_message:
     one: "%{count} error prohibited this address from being saved:"
-    other: "%{count} errors sprohibited this address from being saved:"
+    other: "%{count} errors prohibited this address from being saved:"
   editing_address: "Editing Address"
   reassociate_trips: "Associate this addresses's trips with another address."
   address_search: "Address Search"
@@ -76,7 +76,7 @@ en:
   inactivated_date: "Inactivated Date"
   customer_form_error_message: 
     one: "%{count} error prohibited this customer from being saved:"
-    other: "%{count} errors sprohibited this customer from being saved:"
+    other: "%{count} errors prohibited this customer from being saved:"
   ignore_duplicates: "Ignore duplicates"
   group: "Group"
   first_name: "First Name:"
@@ -132,7 +132,7 @@ en:
   remove_device_pool_driver: "Remove"
   device_pool_form_error_message: 
     one: "%{count} error prohibited this device pool from being saved:"
-    other: "%{count} errors sprohibited this device pool from being saved:"
+    other: "%{count} errors prohibited this device pool from being saved:"
   device_pool_name: "Name"
   device_pool_color: "Color"
   edit_device_pool: "Edit Device Pool"
@@ -240,7 +240,7 @@ en:
   #provider_ethnicities
   provider_ethnicity_form_error_message:
     one: "%{count} error prohibited this provider ethnicity from being saved:"
-    other: "%{count} errors sprohibited this provider ethnicity from being saved:"
+    other: "%{count} errors prohibited this provider ethnicity from being saved:"
   provider_ethnicity_form_name: "Name"
   provider_ethnicity_form_submit: "Submit"
   edit_ethnicity_heading: "Edit Ethnicity"
@@ -539,3 +539,7 @@ en:
   new_run_link_text: "New Run"
   new_run_heading: "New Run"
   new_run_submit: "Submit"
+  #shared
+  generic_error_message:
+      one: "%{count} error prohibited this record from being saved:"
+      other: "%{count} errors prohibited this record from being saved:"
